cmake_minimum_required(VERSION 3.8)
project(cpp_publisher_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
# Add the executable target for the C++ code
add_executable(minimal_publisher src/publisher_member_function.cpp)

# Link the executable against the required libraries
ament_target_dependencies(minimal_publisher rclcpp std_msgs)

# Install the executable so 'ros2 run' can find it
install(TARGETS
  minimal_publisher
  DESTINATION lib/${PROJECT_NAME}
)